Closed Bug 395080 Opened 18 years ago Closed 18 years ago

Double backslash in sysDir filenames causes problems on OS/2

Categories

(NSS :: Libraries, defect, P3)

x86
OS/2
defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: mozilla, Assigned: mozilla)

Details

Attachments

(1 file)

While debugging another bug I found that in EnumSystemFiles() in os2_rand.c the filename that gets passed to (*func) contains a double backslash. sysDir has a trailing backslash and the sprintf adds another one. While this doesn't cause any immediate problems I think this should be cleaned up (OS/2 APIs like DosOpen don't like double backslashes).
Attachment #279795 - Flags: review?(julien.pierre.boogz)
Attachment #279795 - Flags: review?(julien.pierre.boogz) → review+
I need someone with NSS checkin powers to get this into the tree.
Keywords: checkin-needed
Assignee: nobody → julien.pierre.boogz
Assignee: julien.pierre.boogz → mozilla
Peter, I checked this in to the trunk. Checking in os2_rand.c; /cvsroot/mozilla/security/nss/lib/freebl/os2_rand.c,v <-- os2_rand.c new revision: 1.6; previous revision: 1.5 done
Status: NEW → RESOLVED
Closed: 18 years ago
Priority: -- → P3
Resolution: --- → FIXED
Summary: Double backslash in sysDir filenames → Double backslash in sysDir filenames causes problems on OS/2
Target Milestone: --- → 3.12
Keywords: checkin-needed
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: