Fix for bug 395080 . Double backslash in sysDir filenames causes problems in OS/2 . Patch contributed by Peter Weilbacher . r=julien.pierre